--- a/provisioning/tune/roles/app/templates/env.j2
+++ b/provisioning/tune/roles/app/templates/env.j2
@@ -1,5 +1,5 @@
-MYSQL_HOST1="10,160.{{ ansible_default_ipv4.address.split(".")[2] }}.102"
-MYSQL_HOST2="10.160.{{ ansible_default_ipv4.address.split(".")[2] }}.103"
+MYSQL_1_HOST="10,160.{{ ansible_default_ipv4.address.split(".")[2] }}.102"
+MYSQL_2_HOST="10.160.{{ ansible_default_ipv4.address.split(".")[2] }}.103"
 MYSQL_PORT=3306
 MYSQL_USER=isucon
 MYSQL_DBNAME=isuumo
